Fixed Home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ section {
 
 #home-p {
   height: 100vh;
-  background-image: url(/assets/img/Techforce-Home\ page-PH-3.jpg);
+  background-image: url(../img/Techforce-Home\ page-PH-3.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
